--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,30 @@
 # Core ML Framework
-torch>=2.1.0,<3.0.0
-torchvision>=0.16.0
-torchaudio>=2.1.0
+torch
+torchvision
+torchaudio
 
 # Fine-tuning Framework
-unsloth>=2024.1
-transformers>=4.36.0
-trl>=0.7.0
-peft>=0.7.0
-accelerate>=0.25.0
-bitsandbytes>=0.41.0
+unsloth
+transformers
+trl
+peft
+accelerate
+bitsandbytes
 
 # Data Processing
-datasets>=2.16.0
-pandas>=2.0.0,<3.0.0
-numpy>=1.24.0,<2.0.0
+datasets
+pandas
+numpy
 
 # Configuration & Utilities
-pyyaml>=6.0
-python-dotenv>=1.0.0
-tqdm>=4.66.0
+pyyaml
+python-dotenv
+tqdm
 
 # Monitoring & Logging
-tensorboard>=2.15.0
-psutil>=5.9.0
+tensorboard
+psutil
 
 # Testing & Quality
-pytest>=7.4.0
-pytest-cov>=4.1.0
+pytest
+pytest-cov
