--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,11 @@ wandb/
 
 # TensorBoard
 events.out.tfevents.*
+
+# Data pipeline
+data/raw/*
+!data/raw/.gitkeep
+data/extracted/*
+!data/extracted/.gitkeep
+data/processed/*
+!data/processed/.gitkeep
